; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_time_started_relative.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_time_started_relative.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }
%struct.tm = type { i32 }

@HCBUFSIZ_TINY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @status_get_time_started_relative(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.tm*, align 8
  %8 = alloca %struct.tm, align 4
  %9 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  store %struct.TYPE_4__* %12, %struct.TYPE_4__** %3, align 8
  %13 = call i32 @time(i64* %4)
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %5, align 8
  %17 = load i64, i64* %4, align 8
  %18 = load i64, i64* %5, align 8
  %19 = sub nsw i64 %17, %18
  store i64 %19, i64* %6, align 8
  %20 = call %struct.tm* @gmtime_r(i64* %6, %struct.tm* %8)
  store %struct.tm* %20, %struct.tm** %7, align 8
  %21 = load i32, i32* @HCBUFSIZ_TINY, align 4
  %22 = call i64 @hcmalloc(i32 %21)
  %23 = inttoptr i64 %22 to i8*
  store i8* %23, i8** %9, align 8
  %24 = load %struct.tm*, %struct.tm** %7, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = load i32, i32* @HCBUFSIZ_TINY, align 4
  %27 = call i32 @format_timer_display(%struct.tm* %24, i8* %25, i32 %26)
  %28 = load i8*, i8** %9, align 8
  ret i8* %28
}

declare dso_local i32 @time(i64*) #1

declare dso_local %struct.tm* @gmtime_r(i64*, %struct.tm*) #1

declare dso_local i64 @hcmalloc(i32) #1

declare dso_local i32 @format_timer_display(%struct.tm*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
